--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
 </head>
   <body class="bg-deepBlack text-white font-sans antialiased selection:bg-gold-500 selection:text-white">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
